--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body style="background-color:rgb(212, 240, 234);">
-      <h1>WELCOME TO KUBERNETES</h1>
+      <h1>WELCOME TO SHIVA</h1>
       <h2>Application Version: V3</h2>
    </body>
 </html>
